--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
+body {
+    height: 100vh;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(9, 9, 39);
+}
+
 .row {
     display: flex;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    text-align: end;
+    border: solid 10px black;
+    max-width: 360px;
+    background-color: rgb(78, 78, 78);
+}
+
+.container h1 {
+    background-color: rgb(12, 43, 11);
+    margin-bottom: 0;
+    font-size: 80px;
+    resize: none;
+    overflow: hidden;
+}
+
+.container button {
+    font-size: 50px;
+    width: 80px;
+    height: 80px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    padding: 1rem;
+    margin: 5px;
 }
